# SDL2-SNAKE

./: CMakeLists.txt  README.md  makefile
include/: Box.hpp  Game.hpp  Snake.hpp
src/: Box.cpp  Game.cpp  Snake.cpp  main.cpp
